feat(migrations): add migration to convert ngClass to use class

--- a/packages/core/schematics/BUILD.bazel
+++ b/packages/core/schematics/BUILD.bazel
@@ -35,6 +35,7 @@ pkg_npm(
         "//packages/core/schematics/migrations/control-flow-migration:static_files",
         "//packages/core/schematics/ng-generate/cleanup-unused-imports:static_files",
         "//packages/core/schematics/ng-generate/inject-migration:static_files",
+        "//packages/core/schematics/ng-generate/ngclass-to-class-migration:static_files",
         "//packages/core/schematics/ng-generate/output-migration:static_files",
         "//packages/core/schematics/ng-generate/route-lazy-loading:static_files",
         "//packages/core/schematics/ng-generate/self-closing-tags-migration:static_files",
@@ -63,6 +64,7 @@ rollup_bundle(
         "//packages/core/schematics/ng-generate/signal-queries-migration:index.ts": "signal-queries-migration",
         "//packages/core/schematics/ng-generate/output-migration:index.ts": "output-migration",
         "//packages/core/schematics/ng-generate/self-closing-tags-migration:index.ts": "self-closing-tags-migration",
+        "//packages/core/schematics/ng-generate/ngclass-to-class-migration:index.ts": "ngclass-to-class-migration",
         "//packages/core/schematics/migrations/inject-flags:index.ts": "inject-flags",
         "//packages/core/schematics/migrations/test-bed-get:index.ts": "test-bed-get",
         "//packages/core/schematics/migrations/document-core:index.ts": "document-core",
@@ -82,6 +84,7 @@ rollup_bundle(
         "//packages/core/schematics/migrations/test-bed-get",
         "//packages/core/schematics/ng-generate/cleanup-unused-imports",
         "//packages/core/schematics/ng-generate/inject-migration",
+        "//packages/core/schematics/ng-generate/ngclass-to-class-migration",
         "//packages/core/schematics/ng-generate/output-migration",
         "//packages/core/schematics/ng-generate/route-lazy-loading",
         "//packages/core/schematics/ng-generate/self-closing-tags-migration",
