--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,15 @@ jobs:
         run: yarn devtools:test
       - name: Test build
         run: yarn devtools:build:chrome
+      - name: Install Cypress
+        run: yarn global add cypress@14.4.1
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          command: cypress run --project ./devtools/cypress
+          start: yarn bazel run //devtools/src:devserver
+          wait-on: 'http://localhost:4200'
+          wait-on-timeout: 300
 
   test:
     runs-on: ubuntu-latest-4core
