--- a/adev/src/content/ecosystem/rxjs-interop/BUILD.bazel
+++ b/adev/src/content/ecosystem/rxjs-interop/BUILD.bazel
@@ -1,9 +1,16 @@
 load("//adev/shared-docs:index.bzl", "generate_guides")
+load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
 
 generate_guides(
     name = "rxjs-interop",
     srcs = glob([
         "*.md",
     ]),
+    visibility = ["//adev:__subpackages__"],
+)
+
+js_library(
+    name = "guide_files",
+    srcs = glob(["**/*.md"]),
     visibility = ["//adev:__subpackages__"],
 )
