--- a/adev/src/content/guide/di/BUILD.bazel
+++ b/adev/src/content/guide/di/BUILD.bazel
@@ -1,4 +1,5 @@
 load("//adev/shared-docs:index.bzl", "generate_guides")
+load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
 
 generate_guides(
     name = "di",
@@ -10,5 +11,11 @@ generate_guides(
         "//adev/src/content/examples",
     ],
     mermaid_blocks = True,
+    visibility = ["//adev:__subpackages__"],
+)
+
+js_library(
+    name = "guide_files",
+    srcs = glob(["**/*.md"]),
     visibility = ["//adev:__subpackages__"],
 )
