--- a/adev/src/content/guide/testing/BUILD.bazel
+++ b/adev/src/content/guide/testing/BUILD.bazel
@@ -1,4 +1,5 @@
 load("//adev/shared-docs:index.bzl", "generate_guides")
+load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
 
 generate_guides(
     name = "testing",
@@ -8,5 +9,11 @@ generate_guides(
     data = [
         "//adev/src/content/examples",
     ],
+    visibility = ["//adev:__subpackages__"],
+)
+
+js_library(
+    name = "guide_files",
+    srcs = glob(["**/*.md"]),
     visibility = ["//adev:__subpackages__"],
 )
