--- a/packages/core/primitives/dom-navigation/testing/test/BUILD.bazel
+++ b/packages/core/primitives/dom-navigation/testing/test/BUILD.bazel
@@ -19,7 +19,7 @@ ts_project(
 
 jasmine_node_test(
     name = "test",
-    bootstrap = ["//tools/testing:node"],
+    bootstrap = ["//tools/testing:node_zoneless"],
     deps = [
         ":test_lib",
     ],
@@ -27,6 +27,7 @@ jasmine_node_test(
 
 karma_web_test_suite(
     name = "test_web",
+    zoneless = True,
     deps = [
         ":test_lib",
     ],
